--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,7 @@
 body {
-	background: #efefef;
+	background: #ddd;
 }
+
 
 h1,
 h2,
@@ -33,25 +34,49 @@ a.button {
 	-webkit-text-fill-color: transparent;
 }
 
+.image-wrapper {
+	display: inline-block;
+}
+
 .logo-startupweekend {
 	max-width: 16em;
 }
 
+.logo-startupweekend img {}
+
 .logo-startupgrind {
 	max-width: 10em;
-	padding-top: 1em;
 }
 
-@media screen and (max-width: 500px) {
-	.logo-startupweekend {
-		max-width: 8em;
-	}
+.logo-startupgrind img {}
 
-	.logo-startupgrind {
-		max-width: 5em;
-		padding-top: 0.5em;
-	}
+
+.nav-menu {
+	padding-left: 0;
+	margin-left: 0;
+	margin-top: 1em;
 }
+
+.nav-menu li {
+	display: inline-block;
+	padding-right: 1rem;
+}
+
+.nav-menu a {
+	display: inline-block;
+	font-size: 1rem;
+	color: #EF3847;
+	font-weight: 700;
+}
+
+@media screen and (max-width: 39.9375em) {
+	.logos {
+		max-width: 28em;
+
+	}
+	.logos > .grid-x {}
+}
+
 
 .block {
 	padding-top: 4em;
@@ -72,6 +97,26 @@ a.button {
 	}
 }
 
+#teaser {
+	background: -webkit-linear-gradient(0deg, #1AB24B, #EF3847);
+	color: white;
+}
+
+#teaser h1 {
+	line-height: 1.15;
+	margin-bottom: 0.5em;
+
+}
+
+#teaser h1::before {
+	content: "";
+	display: block;
+	height: 0.5em;
+	width: 5em;
+	margin-bottom: 0.2em;
+	background-image: linear-gradient(45deg, rgba(255, 255, 255, 0) 35.71%, white 35.71%, white 50%, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0) 85.71%, white 85.71%, white 100%);
+	background-size: 9.90px 9.90px;
+}
 
 #co-delame {}
 
