--- a/css/app.css
+++ b/css/app.css
@@ -53,6 +53,14 @@ GENERAL
 	height: 10em;
 }
 
+.card {
+	padding: 0.5em 1em;
+	border-radius: .3em;
+	border: none;
+	box-shadow: 0 3px 3px rgba(0, 0, 0, .1);
+}
+
+
 /* Phones */
 
 @media screen and (max-width: 400px) {
@@ -61,6 +69,7 @@ GENERAL
 		height: 6em;
 	}
 }
+
 
 
 
