--- a/css/app.css
+++ b/css/app.css
@@ -35,6 +35,10 @@ h4 {
 	display: inline-block
 }
 
+h2.gradient {
+	margin-bottom: 1em;
+}
+
 p,
 a,
 a.button {
@@ -68,10 +72,6 @@ GENERAL
 	box-shadow: 0 3px 3px rgba(0, 0, 0, .1);
 }
 
-.illus {
-	width: 10em;
-	height: 10em;
-}
 
 /* Tablets */
 
