better "podporili nas"

--- a/css/app.css
+++ b/css/app.css
@@ -46,10 +46,6 @@ a.button {
 }
 
 
-
-
-
-
 h1.subtle,
 h2.subtle,
 h3.subtle,
@@ -96,6 +92,39 @@ p.small {
 	letter-spacing: 0.05em;
 }
 
+.quote {
+	font-style: italic;
+
+	position: relative;
+}
+
+.quote:before {
+	content: "\201E";
+	position: absolute;
+	left: -0.4em;
+	top: 0;
+}
+
+.quote:after {
+	content: "\201C";
+	right: 0;
+	bottom: 0;
+}
+
+asdasd.quote:before {
+	content: "\201C";
+	position: absolute;
+	left: -0.5em;
+	top: 0;
+}
+
+asdsadasd.quote:after {
+	content: "\201D";
+	right: 0;
+	bottom: 0;
+}
+
+
 abbr {
 	border-bottom: 1px dashed rgba(17, 17, 68, .3) !important;
 }
@@ -134,8 +163,15 @@ GENERAL
 **************/
 
 .block {
-	padding-top: 4em;
-	padding-bottom: 4em;
+	padding-top: 3em;
+	padding-bottom: 3em;
+}
+
+@media screen and (min-width: 40em) {
+	.block {
+		padding-top: 4em;
+		padding-bottom: 4em;
+	}
 }
 
 .illus {
@@ -144,18 +180,8 @@ GENERAL
 }
 
 .illus.smaller {
-
 	padding: .7em;
 }
-
-
-.card {
-	padding: 1em;
-	border-radius: .3em;
-	border: none;
-	box-shadow: 0 3px 3px rgba(0, 0, 0, .1);
-}
-
 
 /* Tablets */
 
@@ -164,9 +190,7 @@ GENERAL
 		width: 8em;
 		height: 8em;
 	}
-
 }
-
 
 /* Phones */
 
@@ -175,8 +199,38 @@ GENERAL
 		width: 6em;
 		height: 6em;
 	}
-
 }
+
+.profile-pict,
+.brand-circle {
+	width: 6em;
+	height: 6em;
+}
+
+.brand-circle {
+	border-radius: 100%;
+	background-color: #eee;
+	padding: 1em;
+}
+
+.brand-circle img {
+	vertical-align: middle;
+}
+
+.profile-pict {
+	margin-bottom: 1em;
+}
+
+
+.card {
+	padding: 1.25em;
+	border-radius: .3em;
+	border: none;
+	box-shadow: 0 3px 3px rgba(0, 0, 0, .1);
+}
+
+
+
 
 
 
@@ -309,4 +363,12 @@ MEDIA COVERAGE
 
 .logo-group .cell img {
 	opacity: .5;
+}
+
+/*************
+PODPORILI NAS
+**************/
+
+.profile-pict {
+	border-radius: 100%;
 }
