--- a/css/app.css
+++ b/css/app.css
@@ -286,6 +286,10 @@ NAVIGATION
 	font-weight: 700;
 }
 
+.nav-menu a:hover {
+	color: black;
+}
+
 @media screen and (max-width: 39.9375em) {
 	.logos {
 		max-width: 28em;
