--- a/css/app.css
+++ b/css/app.css
@@ -120,7 +120,9 @@ abbr {
 	border-bottom: 1px dashed rgba(17, 17, 68, .3) !important;
 }
 
-a.button {
+a.button,
+a.button:link,
+a.button:visited {
 	background-color: #EF3847;
 	border-radius: .3em;
 	font-weight: 700;
@@ -132,7 +134,6 @@ a.button .fa-facebook {
 
 
 a.button:active,
-a.button:link,
 a.button:hover,
 a.button:focus {
 	background-color: black;
@@ -330,6 +331,7 @@ TEASER
 
 }
 
+/*
 #teaser h1::before {
 	content: "";
 	display: block;
@@ -338,9 +340,7 @@ TEASER
 	margin-bottom: 0.2em;
 	background-image: linear-gradient(45deg, rgba(255, 255, 255, 0) 35.71%, white 35.71%, white 50%, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0) 85.71%, white 85.71%, white 100%);
 	background-size: 9.90px 9.90px;
-}
-
-
+}*/
 
 /*************
 CO DELAME
