--- a/css/app.css
+++ b/css/app.css
@@ -440,3 +440,11 @@ PODPORILI NAS
 .profile-pict {
 	border-radius: 100%;
 }
+
+
+
+@media screen and (max-width: 39.9375em) {
+	.calendar .cell.empty {
+		display: none !important;
+	}
+}
