add line for nav
for better nav menu recognition

--- a/css/app.css
+++ b/css/app.css
@@ -257,10 +257,10 @@ NAVIGATION
 
 .logo-startovani {
 	display: inline-block;
-
 	background: -webkit-linear-gradient(0deg, #1AB24B, #EF3847);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
+	margin-top: .2em
 }
 
 .image-wrapper {
@@ -279,6 +279,10 @@ NAVIGATION
 
 .logo-startupgrind img {}
 
+.line {
+	border-bottom: 2px solid #ddd;
+	margin-top: 1em;
+}
 
 .nav-menu {
 	padding-left: 0;
