--- a/css/app.css
+++ b/css/app.css
@@ -131,6 +131,10 @@ a.link:hover {
 	border-bottom: 2px solid #000000;
 }
 
+a.link.no-border {
+	border-bottom: none;
+}
+
 a.button,
 a.button:link,
 a.button:visited {
@@ -249,6 +253,7 @@ GENERAL
 
 .card {
 	padding: 1.25em;
+	margin-bottom: 2em;
 	border-radius: .3em;
 	border: none;
 	box-shadow: 0 3px 3px rgba(0, 0, 0, .1);
@@ -471,4 +476,19 @@ PODPORILI NAS
 	.calendar .cell.empty {
 		display: none !important;
 	}
+}
+
+
+
+/*************
+TEAM
+**************/
+
+.medallion {
+	margin-bottom: 2em;
+}
+
+.medallion img + p,
+.medallion img + p + p {
+	margin-bottom: 0;
 }
