--- a/css/app.css
+++ b/css/app.css
@@ -421,7 +421,7 @@ CALENDAR
 .calendar .inner {
 	background-color: #ddd;
 	min-height: 6em;
-	border-radius: .3em;
+	border-radius: .4em;
 	padding: .5em;
 	padding-top: .2em;
 }
@@ -443,9 +443,10 @@ CALENDAR
 .calendar .event {
 	background-color: white;
 	padding: 0.5em;
-	border-radius: .2em;
+	border-radius: .3em;
 	color: black;
 	margin-top: 0.5em;
+	box-shadow: 0 3px 3px rgba(0, 0, 0, .1);
 }
 
 .calendar .active .event p,
